--- a/Modulo 2/Semana08/aulas-react/src/components/Header/style.css
+++ b/Modulo 2/Semana08/aulas-react/src/components/Header/style.css
@@ -14,3 +14,8 @@
   .menu-item .active {
     color: #F60074 !important;
   }
+  .menu-item{
+    cursor: pointer;
+    user-select: none;
+  }
+  /* alterar ponteiro mouse para maozinha sobre link */
